# utility

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: Either.h  Optional.h
include/defer/: DeferUtil.h
include/defer/class/: Defer.h
include/defer/smart-ptr/: Defer.h
